--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: python
 python:
   - "3.5"
 # command to run tests
-script: python -m unittest test.test -v
+script: python3 -m unittest discover test -v
